--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 include ':app'
+include ':react-native-photoeditorsdk'
+project(':react-native-photoeditorsdk').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-photoeditorsdk/android')
 
 
 // Import gradle helpers for unimodules.
