--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,6 +27,8 @@ target 'blank-template' do
 
   pod 'RNPhotoEditorSDK', :path => '../node_modules/react-native-photoeditorsdk'
 
+  pod 'RNVideoEditorSDK', :path => '../node_modules/react-native-videoeditorsdk'
+
   post_install do |installer|
     installer.pods_project.main_group.tab_width = '2';
     installer.pods_project.main_group.indent_width = '2';
