--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "expo-av": "^8.0.0",
     "expo-image-manipulator": "^8.0.0",
     "expo-image-picker": "^8.0.2",
     "expo-permissions": "^8.0.0",
@@ -18,6 +19,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-photoeditorsdk": "^2.3.2",
     "react-native-unimodules": "^0.7.0",
+    "react-native-videoeditorsdk": "^2.4.1",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
