--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native-ffmpeg": "^0.4.4",
     "react-native-photoeditorsdk": "^2.3.2",
     "react-native-unimodules": "^0.7.0",
     "react-native-videoeditorsdk": "^2.4.1",
